--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,14 @@ set(CMAKE_CXX_STANDARD 14)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 set(SDL2_PATH "SDL2")
+set(SDL2_IMAGE_PATH "SDL2_image")
+set(SDL2_TTF_PATH "SDL2_ttf")
 
 find_package(SDL2 REQUIRED)
+find_package(SDL2_ttf REQUIRED)
+find_package(SDL2_image REQUIRED)
+
 include_directories(${SDL2_INCLUDE_DIRS})
 
-message(STATUS "found: ${SDL2_FOUND}")
-message(STATUS "found: ${SDL2MAIN_FOUND}")
-message(STATUS "include dir: ${SDL2_INCLUDE_DIRS}")
-message(STATUS "lib dir: ${SDL2_LIBRARIES}")
-
 add_executable(MPTetris main.cpp)
-target_link_libraries(MPTetris SDL2::Main)
+target_link_libraries(MPTetris SDL2::Main SDL2::Image SDL2::TTF)
