--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,5 @@ find_package(SDL2_image REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIRS})
 
-add_executable(MPTetris main.cpp)
+add_executable(MPTetris AssetHelper.h RenderHelper.h TetrisApp.h AppComponent.h AssetHelper.cpp RenderHelper.cpp TetrisApp.cpp AppComponent.cpp main.cpp)
 target_link_libraries(MPTetris SDL2::Main SDL2::Image SDL2::TTF)
